Bug 1643902 - Call setTypeForScriptFunction for standalone functions. r=anba

Fix recent regression when standalone functions started being allocated by
instantiateStencils. This adds an `isStandalone` flag to the function box
that we can check in addition to `wasEmitted` (which is not set for these
standalone functions). Also remove some dead code.

Differential Revision: https://phabricator.services.mozilla.com/D78604